@@ -93,7 +93,7 @@ public class BitmapFontTest extends GdxTest {
 		Gdx.gl.glClear(GL20.GL_COLOR_BUFFER_BIT);
 
 		// Test wrapping or truncation with the font directly.
-		if (!true) {
+		if (true) {
 			// BitmapFont font = label.getStyle().font;
 			BitmapFont font = this.font;
 			font.getRegion().getTexture().setFilter(TextureFilter.Nearest, TextureFilter.Nearest);
@@ -108,9 +108,9 @@ public class BitmapFontTest extends GdxTest {
 
 			spriteBatch.begin();
 			String text = "your new";
-			 text = "How quickly [RED]daft jumping zebras vex.";
-			// text = "Another font wrap is-sue, this time with    multiple whitespace characters.";
-			text = "test with AGWlWi      AGWlWi issue";
+			// text = "How quickly da[RED]ft jumping zebras vex.";
+			text = "Another font wrap is-sue,  this time with multiple whitespace characters.";
+			// text = "test with AGWlWi      AGWlWi issue";
 			if (true) { // Test wrap.
 				layout.setText(font, text, 0, text.length(), font.getColor(), w, Align.center, true, null);
 			} else { // Test truncation.
@@ -138,7 +138,7 @@ public class BitmapFontTest extends GdxTest {
 			label.setStyle(label.getStyle());
 			label.setText("How quickly [RED]daft[] jumping zebras vex.");
 			label.setWrap(true);
-//			label.setEllipsis(true);
+// label.setEllipsis(true);
 			label.setAlignment(Align.center, Align.right);
 			label.setWidth(Gdx.input.getX() - label.getX());
 			label.setHeight(label.getPrefHeight());
